creusot/tests/should_fail/unsupported_macros.stderr
error: Unsupported expression: macros other than `pearlite!` or `proof_assert!` are unsupported in pearlite code
 --> unsupported_macros.rs:7:5
  |
7 |     panic!()
  |     ^^^^^^^^

error: internal error: Cannot fetch THIR body

error: aborting due to 2 previous errors

